--- a/index.html
+++ b/index.html
@@ -220,7 +220,11 @@
         </div>
         <div class="col-lg-4 col-xs-12">
           <div class="show-box">
-            <img class="img-fulid" src="img/features/feature.png" alt="">
+            <picture>
+              <source srcset="img/features/feature.webp" type="image/webp">
+              <source srcset="img/features/feature.png" type="image/png">
+              <img class="img-fulid" src="img/features/feature.png" alt="">
+            </picture>
           </div>
         </div>
       </div>
@@ -279,8 +283,8 @@
                 <picture>
                   <source srcset="img/portfolio/img2.webp" type="image/webp">
                   <source srcset="img/portfolio/img2.jpg" type="image/jpeg">
+                  <img src="img/portfolio/img2.jpg" alt="" />
                 </picture>
-                <img src="img/portfolio/img2.jpg" alt="" />
                 <a class="overlay lightbox" href="img/portfolio/img2.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
                   </a>
@@ -291,10 +295,10 @@
             <div class="portfolio-item">
               <div class="shot-item">
                 <picture>
-                <source srcset="img/portfolio/img3.webp" type="image/webp">
-                <source srcset="img/portfolio/img3.jpg" type="image/jpeg">
-                <img src="img/portfolio/img3.jpg" alt="" />
-              </picture>
+                  <source srcset="img/portfolio/img3.webp" type="image/webp">
+                  <source srcset="img/portfolio/img3.jpg" type="image/jpeg">
+                  <img src="img/portfolio/img3.jpg" alt="" />
+                </picture>
                 <a class="overlay lightbox" href="img/portfolio/img3.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
                   </a>
@@ -305,10 +309,10 @@
             <div class="portfolio-item">
               <div class="shot-item">
                 <picture>
-                <source srcset="img/portfolio/img4.webp" type="image/webp">
-                <source srcset="img/portfolio/img4.jpg" type="image/jpeg">
-                <img src="img/portfolio/img4.jpg" alt="" />
-              </picture>
+                  <source srcset="img/portfolio/img4.webp" type="image/webp">
+                  <source srcset="img/portfolio/img4.jpg" type="image/jpeg">
+                  <img src="img/portfolio/img4.jpg" alt="" />
+                </picture>
                 <a class="overlay lightbox" href="img/portfolio/img4.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
                   </a>
@@ -319,10 +323,10 @@
             <div class="portfolio-item">
               <div class="shot-item">
                 <picture>
-                <source srcset="img/portfolio/img5.webp" type="image/webp">
-                <source srcset="img/portfolio/img5.jpg" type="image/jpeg">
-                <img src="img/portfolio/img5.jpg" alt="" />
-              </picture>
+                  <source srcset="img/portfolio/img5.webp" type="image/webp">
+                  <source srcset="img/portfolio/img5.jpg" type="image/jpeg">
+                  <img src="img/portfolio/img5.jpg" alt="" />
+                </picture>
                 <a class="overlay lightbox" href="img/portfolio/img5.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
                   </a>
@@ -333,10 +337,10 @@
             <div class="portfolio-item">
               <div class="shot-item">
                 <picture>
-                <source srcset="img/portfolio/img6.webp" type="image/webp">
-                <source srcset="img/portfolio/img6.jpg" type="image/jpeg">
-                <img src="img/portfolio/img6.jpg" alt="" />
-              </picture>
+                  <source srcset="img/portfolio/img6.webp" type="image/webp">
+                  <source srcset="img/portfolio/img6.jpg" type="image/jpeg">
+                  <img src="img/portfolio/img6.jpg" alt="" />
+                </picture>
                 <a class="overlay lightbox" href="img/portfolio/img6.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
                   </a>
@@ -451,10 +455,10 @@
         <div class="col-lg-3 col-md-6 col-xs-12">
           <div class="single-team">
             <picture>
-            <source srcset="img/team/team1.webp" type="image/webp">
-            <source srcset="img/team/team1.jpg" type="image/jpeg">
-            <img src="img/team/team1.jpg" alt="">
-          </picture>
+              <source srcset="img/team/team1.webp" type="image/webp">
+              <source srcset="img/team/team1.jpg" type="image/jpeg">
+              <img src="img/team/team1.jpg" alt="">
+            </picture>
             <div class="team-details">
               <div class="team-inner">
                 <h4 class="team-title">Angela Oliver</h4>
@@ -466,10 +470,10 @@
         <div class="col-lg-3 col-md-6 col-xs-12">
           <div class="single-team">
             <picture>
-            <source srcset="img/team/team2.webp" type="image/webp">
-            <source srcset="img/team/team2.jpg" type="image/jpeg">
-            <img src="img/team/team2.jpg" alt="">
-          </picture>
+              <source srcset="img/team/team2.webp" type="image/webp">
+              <source srcset="img/team/team2.jpg" type="image/jpeg">
+              <img src="img/team/team2.jpg" alt="">
+            </picture>
             <div class="team-details">
               <div class="team-inner">
                 <h4 class="team-title">Helen Caley</h4>
@@ -481,10 +485,10 @@
         <div class="col-lg-3 col-md-6 col-xs-12">
           <div class="single-team">
             <picture>
-            <source srcset="img/team/team3.webp" type="image/webp">
-            <source srcset="img/team/team3.jpg" type="image/jpeg">
+              <source srcset="img/team/team3.webp" type="image/webp">
+              <source srcset="img/team/team3.jpg" type="image/jpeg">
+              <img src="img/team/team3.jpg" alt="">
             </picture>
-            <img src="img/team/team3.jpg" alt="">
             <div class="team-details">
               <div class="team-inner">
                 <h4 class="team-title">Craig Oliver</h4>
@@ -496,10 +500,10 @@
         <div class="col-lg-3 col-md-6 col-xs-12">
           <div class="single-team">
             <picture>
-            <source srcset="img/team/team4.webp" type="image/webp">
-            <source srcset="img/team/team4.jpg" type="image/jpeg">
-            <img class="img-fulid" src="img/team/team4.jpg" alt="">
-          </picture>
+              <source srcset="img/team/team4.webp" type="image/webp">
+              <source srcset="img/team/team4.jpg" type="image/jpeg">
+              <img class="img-fulid" src="img/team/team4.jpg" alt="">
+            </picture>
             <div class="team-details">
               <div class="team-inner">
                 <h4 class="team-title">Luke Jackson</h4>
@@ -521,10 +525,10 @@
           <div class="touch-slider owl-carousel owl-theme">
             <div class="testimonial-item">
               <picture>
-              <source srcset="img/testimonial/customer1.webp" type="image/webp">
-              <source srcset="img/testimonial/customer1.jpg" type="image/jpeg">
-              <img src="img/testimonial/customer1.jpg" alt="Client Testimonoal" />
-            </picture>
+                <source srcset="img/testimonial/customer1.webp" type="image/webp">
+                <source srcset="img/testimonial/customer1.jpg" type="image/jpeg">
+                <img src="img/testimonial/customer1.jpg" alt="Client Testimonoal" />
+              </picture>
               <div class="testimonial-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
                 <h3>Jone Deam</h3>
@@ -533,10 +537,10 @@
             </div>
             <div class="testimonial-item">
               <picture>
-              <source srcset="img/testimonial/customer2.webp" type="image/webp">
-              <source srcset="img/testimonial/customer2.jpg" type="image/jpeg">
-              <img src="img/testimonial/customer2.jpg" alt="Client Testimonoal" />
-            </picture>
+                <source srcset="img/testimonial/customer2.webp" type="image/webp">
+                <source srcset="img/testimonial/customer2.jpg" type="image/jpeg">
+                <img src="img/testimonial/customer2.jpg" alt="Client Testimonoal" />
+              </picture>
               <div class="testimonial-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
                 <h3>Oidila Matik</h3>
@@ -545,10 +549,10 @@
             </div>
             <div class="testimonial-item">
               <picture>
-              <source srcset="img/testimonial/customer3.webp" type="image/webp">
-              <source srcset="img/testimonial/customer3.jpg" type="image/jpeg">
-              <img src="img/testimonial/customer3.jpg" alt="Client Testimonoal" />
-            </picture>
+                <source srcset="img/testimonial/customer3.webp" type="image/webp">
+                <source srcset="img/testimonial/customer3.jpg" type="image/jpeg">
+                <img src="img/testimonial/customer3.jpg" alt="Client Testimonoal" />
+              </picture>
               <div class="testimonial-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
                 <h3>Alex Dattilo</h3>
@@ -557,10 +561,10 @@
             </div>
             <div class="testimonial-item">
               <picture>
-              <source srcset="img/testimonial/customer4.webp" type="image/webp">
-              <source srcset="img/testimonial/customer4.jpg" type="image/jpeg">
-              <img src="img/testimonial/customer4.jpg" alt="Client Testimonoal" />
-            </picture>
+                <source srcset="img/testimonial/customer4.webp" type="image/webp">
+                <source srcset="img/testimonial/customer4.jpg" type="image/jpeg">
+                <img src="img/testimonial/customer4.jpg" alt="Client Testimonoal" />
+              </picture>
               <div class="testimonial-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
                 <h3>Paul Kowalsy</h3>
