make nav collapse earlier, update bottom nav, set grey background for team

--- a/index.html
+++ b/index.html
@@ -638,16 +638,16 @@
         <div class="col-lg-6 col-sm-6 col-xs-12">
           <ul class="footer-links">
             <li>
-              <a href="#">Homepage</a>
+              <a class="page-scroll" href="#hero-area">Home</a>
             </li>
             <li>
-              <a href="#">Services</a>
+              <a class="page-scroll" href="#services">Services</a>
             </li>
             <li>
-              <a href="#">About Us</a>
+              <a class="page-scroll" href="#pricing">Pricing</a>
             </li>
             <li>
-              <a href="#">Contact</a>
+              <a class="page-scroll" href="#team">Team</a>
             </li>
           </ul>
         </div>
