--- a/index.html
+++ b/index.html
@@ -599,19 +599,25 @@
                 <div class="row">
                   <div class="col-md-12">
                     <div class="form-group">
-                      <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required data-error="Please enter your name">
+                      <input type="text" autocomplete="off" class="form-control" id="name" aria-label="Name" name="name" placeholder="Your Name" required data-error="Please enter your name">
                       <div class="help-block with-errors"></div>
                     </div>
                   </div>
                   <div class="col-md-12">
                     <div class="form-group">
-                      <input type="text" placeholder="Your Email" id="email" class="form-control" name="name" required data-error="Please enter your email">
+                      <input type="email" autocomplete="email" placeholder="Your Email" id="email" class="form-control" name="emailAddress" aria-label="Your email" required data-error="Please enter your email">
                       <div class="help-block with-errors"></div>
                     </div>
                   </div>
                   <div class="col-md-12">
                     <div class="form-group">
-                      <textarea class="form-control" id="message" placeholder="Your Message" rows="8" data-error="Write your message" required></textarea>
+                      <input type="text" autocomplete="off" class="form-control" id="phone" aria-label="Phone number" name="phone" placeholder="Your phone #">
+                      <div class="help-block with-errors"></div>
+                    </div>
+                  </div>
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <textarea class="form-control" aria-label="Message" id="message" name="message" placeholder="Your Message" rows="8" data-error="Write your message" required></textarea>
                       <div class="help-block with-errors"></div>
                     </div>
                     <div class="submit-button text-center">
