--- a/index.html
+++ b/index.html
@@ -45,13 +45,10 @@
               <a class="nav-link page-scroll" href="#hero-area">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="#services">Services</a>
+              <a class="nav-link page-scroll" href="#services">Activities</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="#features">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link page-scroll" href="#portfolios">Works</a>
+              <a class="nav-link page-scroll" href="#portfolios">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link page-scroll" href="#pricing">Pricing</a>
@@ -72,13 +69,10 @@
           <a class="page-scroll" href="#hero-area">Home</a>
         </li>
         <li>
-          <a class="page-scroll" href="#services">Services</a>
+          <a class="page-scroll" href="#services">Activities</a>
         </li>
         <li>
-          <a class="page-scroll" href="#features">Features</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#portfolios">Works</a>
+          <a class="page-scroll" href="#portfolios">Gallery</a>
         </li>
         <li>
           <a class="page-scroll" href="#pricing">Pricing</a>
@@ -99,7 +93,7 @@
         <div class="col-md-10">
           <div class="contents text-center">
             <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Pulse Training For Life</h1>
-            <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms"></p>
+            <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Taekwon-Do &bull; Personal Training &bull; Self Defence</p>
             <!-- <a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Download</a> -->
           </div>
         </div>
@@ -112,9 +106,9 @@
   <section id="services" class="section">
     <div class="container">
       <div class="section-header">
-        <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Our Services</h2>
+        <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Activities</h2>
         <hr class="lines wow zoomIn" data-wow-delay="0.3s">
-        <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Pulse Taekwon-Do is a Christchurch based martial arts club<br>alliliated to International Taekwon-Do.</p>
+        <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Pulse Training For Life, based in Christchurch, offers a range of activities, including ITF Taekwon-Do, personal or small group fitness training, and self defence workshops</p>
       </div>
       <div class="row justify-content-center">
         <div class="col-md-4 col-sm-6">
@@ -122,7 +116,7 @@
             <div class="icon">
               <i class="fa fa-paw"></i>
             </div>
-            <h4>Kubs</h4>
+            <h4>TKD Kubs</h4>
             <p>Our TKD Kubz programme is a specially designed class for children aged between 3-6 years of age.</p>
           </div>
         </div>
@@ -131,7 +125,7 @@
             <div class="icon">
               <i class="fa fa-child"></i>
             </div>
-            <h4>Kids</h4>
+            <h4>TKD Kids</h4>
             <p>Junior Taekwon-Do programme for children aged between 5-9 years of age.</p>
           </div>
         </div>
@@ -140,7 +134,7 @@
             <div class="icon">
               <i class="fa fa-male"></i>
             </div>
-            <h4>Youth / Adults</h4>
+            <h4>TKD Youth / Adults</h4>
             <p>No matter what your current fitness level, our instructors are trained to give you safe and enjoyable tuition.</p>
           </div>
         </div>
@@ -150,7 +144,7 @@
               <i class="fa fa-bullhorn"></i>
             </div>
             <h4>Personal Training</h4>
-            <p>No matter what your current fitness level, our instructors are trained to give you safe and enjoyable tuition.</p>
+            <p>Specialised coaching focused on pre-postnatal women, and men & women with pelvic floor issues.  From a qualified pre/post natal coach.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6">
@@ -159,7 +153,7 @@
               <i class="fa fa-shield"></i>
             </div>
             <h4>Self Defence</h4>
-            <p>No matter what your current fitness level, our instructors are trained to give you safe and enjoyable tuition.</p>
+            <p>Our coaches are accredited by Protect Self Defence, the leading provider of self defence workshops in New Zealand.</p>
           </div>
         </div>
       </div>
@@ -168,7 +162,7 @@
   <!-- Services Section End -->
 
   <!-- Features Section Start -->
-  <section id="features" class="section" data-stellar-background-ratio="0.2">
+  <!-- <section id="features" class="section" data-stellar-background-ratio="0.2">
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">Some Features</h2>
@@ -220,7 +214,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- Features Section End -->
 
   <!-- Portfolio Section -->
@@ -228,9 +222,9 @@
     <!-- Container Starts -->
     <div class="container">
       <div class="section-header">
-        <h2 class="section-title">Our Portfolio</h2>
+        <h2 class="section-title">Gallery</h2>
         <hr class="lines">
-        <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br> Lorem ipsum dolor sit amet, consectetur.</p>
+        <p class="section-subtitle">For the visually mined, check out some snapshots of what we do.</p>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -351,8 +345,8 @@
       <div class="row justify-content-center">
         <div class="col-lg-8">
           <div class="video-promo-content text-center">
-            <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Watch Our Intro video</h2>
-            <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Aliquam vestibulum cursus felis. In iaculis iaculis sapien ac condimentum. Vestibulum congue posuere lacus, id tincidunt nisi porta sit amet. Suspendisse et sapien varius, pellentesque dui non, semper orci.</p>
+            <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Watch Our TKD Intro video</h2>
+            <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Pulse Training For Life is affiliated to ITKD which has been established for over 40 years and has well over 3500 members and around 100 clubs nationwide. Our youngest start at just 3 years of age and our oldest is over 70!.</p>
             <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/245814163" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
             <script src="https://player.vimeo.com/api/player.js"></script>
             <p><a href="https://vimeo.com/245814163"></a></p>
@@ -367,7 +361,7 @@
   <div id="pricing" class="section pricing-section">
     <div class="container">
       <div class="section-header">
-        <h2 class="section-title">Pricing Table</h2>
+        <h2 class="section-title">Pricing</h2>
         <hr class="lines">
         <p class="section-subtitle">First two weeks free, with no obligation or cost, to see if Taekwon-Do is for you before you pay a cent, so come along and check it out!</p>
       </div>
@@ -385,9 +379,6 @@
                 <li>Vestibul varius fermentum erat</li>
               </ul>
             </div>
-            <div class="plan-button">
-              <!-- <a href="#" class="btn btn-common">Get Plan</a> -->
-            </div>
           </div>
         </div>
 
@@ -403,9 +394,6 @@
                 <li>Vestibul varius fermentum erat</li>
               </ul>
             </div>
-            <div class="plan-button">
-              <!-- <a href="#" class="btn btn-common">Buy Now</a> -->
-            </div>
           </div>
         </div>
 
@@ -419,16 +407,13 @@
                 <li>Ideal for Families</li>
               </ul>
             </div>
-            <div class="plan-button">
-              <!-- <a href="#" class="btn btn-common">Buy Now</a> -->
-            </div>
           </div>
         </div>
 
       </div>
       <div class="section-header">
-        <p class="section-subtitle">Joining Fee - Individual - $70 - 2 person - $120 - Family - $170</p>
-        <p class="section-subtitle">A $10 discount is also available for holders of a Community Services Card and Tertiary Students</p>
+        <p class="section-note">Joining Fee - Individual - $70 - 2 person - $120 - Family - $170</p>
+        <p class="section-note">A $10 discount is also available for holders of a Community Services Card and Tertiary Students</p>
       </div>
     </div>
   </div>
@@ -440,7 +425,7 @@
       <div class="section-header">
         <h2 class="section-title">Our Team</h2>
         <hr class="lines">
-        <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br> Lorem ipsum dolor sit amet, consectetur.</p>
+        <p class="section-subtitle">Meet our team of highly qualified, experienced & motivated instructors.</p>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 col-xs-12">
@@ -453,7 +438,11 @@
             <div class="team-details">
               <div class="team-inner">
                 <h4 class="team-title">Angela Oliver</h4>
-                <p>Founder</p>
+                <ul>
+                  <li>TKD Instructor</li>
+                  <li>Personal Trainer</li>
+                  <li>Self Defence</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -468,7 +457,10 @@
             <div class="team-details">
               <div class="team-inner">
                 <h4 class="team-title">Helen Caley</h4>
-                <p>Instructor</p>
+                <ul>
+                  <li>TKD Instructor</li>
+                  <li>High Performance TKD</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -483,7 +475,10 @@
             <div class="team-details">
               <div class="team-inner">
                 <h4 class="team-title">Craig Oliver</h4>
-                <p>Instructor</p>
+                <ul>
+                  <li>TKD Kubs / Kids Instructor</li>
+                  <li>Self Defence</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -498,7 +493,10 @@
             <div class="team-details">
               <div class="team-inner">
                 <h4 class="team-title">Luke Jackson</h4>
-                <p>Instructor</p>
+                <ul>
+                  <li>TKD Instructor</li>
+                  <li>High Performance TKD</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -647,7 +645,7 @@
               <a class="page-scroll" href="#hero-area">Home</a>
             </li>
             <li>
-              <a class="page-scroll" href="#services">Services</a>
+              <a class="page-scroll" href="#services">Activities</a>
             </li>
             <li>
               <a class="page-scroll" href="#pricing">Pricing</a>
