--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         <div class="col-lg-8">
           <div class="video-promo-content text-center">
             <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Watch Our TKD Intro video</h2>
-            <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Pulse Training For Life is affiliated to ITKD which has been established for over 40 years and has well over 3500 members and around 100 clubs nationwide. Our youngest start at just 3 years of age and our oldest is over 70!.</p>
+            <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Pulse Taekwon-Do is affiliated to ITKD which has been established for over 40 years and has well over 3500 members and around 100 clubs nationwide. Our youngest start at just 3 years of age and our oldest is over 70!.</p>
             <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/245814163" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
             <script src="https://player.vimeo.com/api/player.js"></script>
             <p><a href="https://vimeo.com/245814163"></a></p>
