--- a/index.html
+++ b/index.html
@@ -439,9 +439,10 @@
               <div class="team-inner">
                 <h4 class="team-title">Angela Oliver</h4>
                 <ul>
-                  <li>TKD Instructor</li>
+                  <li>Founder</li>
+                  <li>Head TKD Instructor</li>
                   <li>Personal Trainer</li>
-                  <li>Self Defence</li>
+                  <li>Self Defence Coach</li>
                 </ul>
               </div>
             </div>
@@ -459,7 +460,7 @@
                 <h4 class="team-title">Helen Caley</h4>
                 <ul>
                   <li>TKD Instructor</li>
-                  <li>High Performance TKD</li>
+                  <li>TKD High Performance</li>
                 </ul>
               </div>
             </div>
@@ -477,7 +478,7 @@
                 <h4 class="team-title">Craig Oliver</h4>
                 <ul>
                   <li>TKD Kubs / Kids Instructor</li>
-                  <li>Self Defence</li>
+                  <li>Self Defence Coach</li>
                 </ul>
               </div>
             </div>
@@ -495,7 +496,7 @@
                 <h4 class="team-title">Luke Jackson</h4>
                 <ul>
                   <li>TKD Instructor</li>
-                  <li>High Performance TKD</li>
+                  <li>TKD High Performance</li>
                 </ul>
               </div>
             </div>
