--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="icon">
               <i class="fa fa-paw"></i>
             </div>
-            <h4>TKD Kubs</h4>
+            <h4>TKD Kubz</h4>
             <p>Our TKD Kubz programme is a specially designed class for children aged between 3-6 years of age.</p>
           </div>
         </div>
@@ -477,7 +477,7 @@
               <div class="team-inner">
                 <h4 class="team-title">Craig Oliver</h4>
                 <ul>
-                  <li>TKD Kubs / Kids Instructor</li>
+                  <li>TKD Kubz / Kids Instructor</li>
                   <li>Self Defence Coach</li>
                 </ul>
               </div>
@@ -579,7 +579,7 @@
               <div class="contact-address">
                 <p>Casebrook Intermediate, 90 Veitches Road, Christchurch </p>
                 <p class="phone">Phone: <span>(03 929 0067)</span></p>
-                <p class="email">E-mail: <span>(info@pulsetkd.co.nz)</span></p>
+                <p class="email">Email: <span>(info@pulsetkd.co.nz)</span></p>
               </div>
               <div class="social-icons">
                 <ul>
