--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </button>
         </div>
         <div class="collapse navbar-collapse" id="main-navbar">
-          <ul class="navbar-nav mr-auto w-100 justify-content-end">
+          <ul class="navbar-nav mr-auto w-100 justify-content-center">
             <li class="nav-item">
               <a class="nav-link page-scroll" href="#hero-area">Home</a>
             </li>
@@ -93,8 +93,11 @@
         <div class="col-md-10">
           <div class="contents text-center">
             <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Pulse Training For Life</h1>
-            <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Taekwon-Do &bull; Personal Training &bull; Self Defence</p>
-            <!-- <a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Download</a> -->
+            <div class="text-center">
+              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Taekwon-Do</p>
+              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Personal Training</p>
+              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Self Defence</p>
+            </div>
           </div>
         </div>
       </div>
