--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="keywords" content="training for life, taekwon-do, personal training, postnatal, prenatal, pelvic floor, self defence">
   <meta name="Description" content="Pulse Taining For Life offer ITF Taekwon-Do, self defence, and personal training with a focus on pre/post natal women, and mens and womens pelvic floor issues">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
   <title>Pulse Taining For Life</title>
 
   <!-- Bootstrap CSS -->
@@ -34,7 +34,7 @@
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <a href="index.html" class="navbar-brand"><img class="img-fulid" src="img/logo.png" alt=""></a>
+          <a href="index.html" class="navbar-brand"><img class="img-fulid" src="img/logo.png" alt="pulse logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
               <i class="lnr lnr-menu"></i>
             </button>
@@ -257,7 +257,7 @@
                 <picture>
                   <source srcset="img/portfolio/img1.webp" type="image/webp">
                   <source srcset="img/portfolio/img1.jpg" type="image/jpeg">
-                  <img src="img/portfolio/img1.jpg" alt="" />
+                  <img src="img/portfolio/img1.jpg" alt="Gallery Image" />
                 </picture>
                 <a class="overlay lightbox" href="img/portfolio/img1.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
@@ -271,7 +271,7 @@
                 <picture>
                   <source srcset="img/portfolio/img2.webp" type="image/webp">
                   <source srcset="img/portfolio/img2.jpg" type="image/jpeg">
-                  <img src="img/portfolio/img2.jpg" alt="" />
+                  <img src="img/portfolio/img2.jpg" alt="Gallery Image" />
                 </picture>
                 <a class="overlay lightbox" href="img/portfolio/img2.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
@@ -285,7 +285,7 @@
                 <picture>
                   <source srcset="img/portfolio/img3.webp" type="image/webp">
                   <source srcset="img/portfolio/img3.jpg" type="image/jpeg">
-                  <img src="img/portfolio/img3.jpg" alt="" />
+                  <img src="img/portfolio/img3.jpg" alt="Gallery Image" />
                 </picture>
                 <a class="overlay lightbox" href="img/portfolio/img3.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
@@ -299,7 +299,7 @@
                 <picture>
                   <source srcset="img/portfolio/img4.webp" type="image/webp">
                   <source srcset="img/portfolio/img4.jpg" type="image/jpeg">
-                  <img src="img/portfolio/img4.jpg" alt="" />
+                  <img src="img/portfolio/img4.jpg" alt="Gallery Image" />
                 </picture>
                 <a class="overlay lightbox" href="img/portfolio/img4.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
@@ -313,7 +313,7 @@
                 <picture>
                   <source srcset="img/portfolio/img5.webp" type="image/webp">
                   <source srcset="img/portfolio/img5.jpg" type="image/jpeg">
-                  <img src="img/portfolio/img5.jpg" alt="" />
+                  <img src="img/portfolio/img5.jpg" alt="Gallery Image" />
                 </picture>
                 <a class="overlay lightbox" href="img/portfolio/img5.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
@@ -327,7 +327,7 @@
                 <picture>
                   <source srcset="img/portfolio/img6.webp" type="image/webp">
                   <source srcset="img/portfolio/img6.jpg" type="image/jpeg">
-                  <img src="img/portfolio/img6.jpg" alt="" />
+                  <img src="img/portfolio/img6.jpg" alt="Gallery Image" />
                 </picture>
                 <a class="overlay lightbox" href="img/portfolio/img6.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
@@ -350,7 +350,7 @@
           <div class="video-promo-content text-center">
             <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Watch Our TKD Intro video</h2>
             <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Pulse Taekwon-Do is affiliated to ITKD which has been established for over 40 years and has well over 3500 members and around 100 clubs nationwide. Our youngest start at just 3 years of age and our oldest is over 70!.</p>
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/245814163" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe title="TKD Promo Video" src="https://player.vimeo.com/video/245814163" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
             <script src="https://player.vimeo.com/api/player.js"></script>
             <p><a href="https://vimeo.com/245814163"></a></p>
           </div>
