--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                   <source srcset="img/portfolio/img1.jpg" type="image/jpeg">
                   <img src="img/portfolio/img1.jpg" alt="Gallery Image" />
                 </picture>
-                <a class="overlay lightbox" href="img/portfolio/img1.jpg">
+                <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img1.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
                   </a>
               </div>
@@ -273,7 +273,7 @@
                   <source srcset="img/portfolio/img2.jpg" type="image/jpeg">
                   <img src="img/portfolio/img2.jpg" alt="Gallery Image" />
                 </picture>
-                <a class="overlay lightbox" href="img/portfolio/img2.jpg">
+                <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img2.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
                   </a>
               </div>
@@ -287,7 +287,7 @@
                   <source srcset="img/portfolio/img3.jpg" type="image/jpeg">
                   <img src="img/portfolio/img3.jpg" alt="Gallery Image" />
                 </picture>
-                <a class="overlay lightbox" href="img/portfolio/img3.jpg">
+                <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img3.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
                   </a>
               </div>
@@ -301,7 +301,7 @@
                   <source srcset="img/portfolio/img4.jpg" type="image/jpeg">
                   <img src="img/portfolio/img4.jpg" alt="Gallery Image" />
                 </picture>
-                <a class="overlay lightbox" href="img/portfolio/img4.jpg">
+                <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img4.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
                   </a>
               </div>
@@ -315,7 +315,7 @@
                   <source srcset="img/portfolio/img5.jpg" type="image/jpeg">
                   <img src="img/portfolio/img5.jpg" alt="Gallery Image" />
                 </picture>
-                <a class="overlay lightbox" href="img/portfolio/img5.jpg">
+                <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img5.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
                   </a>
               </div>
@@ -329,7 +329,7 @@
                   <source srcset="img/portfolio/img6.jpg" type="image/jpeg">
                   <img src="img/portfolio/img6.jpg" alt="Gallery Image" />
                 </picture>
-                <a class="overlay lightbox" href="img/portfolio/img6.jpg">
+                <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img6.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
                   </a>
               </div>
@@ -352,7 +352,7 @@
             <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Pulse Taekwon-Do is affiliated to ITKD which has been established for over 40 years and has well over 3500 members and around 100 clubs nationwide. Our youngest start at just 3 years of age and our oldest is over 70!.</p>
             <div style="padding:56.25% 0 0 0;position:relative;"><iframe title="TKD Promo Video" src="https://player.vimeo.com/video/245814163" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
             <script src="https://player.vimeo.com/api/player.js"></script>
-            <p><a href="https://vimeo.com/245814163"></a></p>
+            <p><a href="https://vimeo.com/245814163"  aria-label="TKD Intro Video on vimeo"></a></p>
           </div>
         </div>
       </div>
@@ -586,7 +586,7 @@
               </div>
               <div class="social-icons">
                 <ul>
-                  <li class="facebook"><a href="https://www.facebook.com/pulsetkd/"><i class="fa fa-facebook"></i></a></li>
+                  <li class="facebook"><a href="https://www.facebook.com/pulsetkd/" aria-label="facebook page"><i class="fa fa-facebook"></i></a></li>
                   <!-- <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li> -->
                   <!-- <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
                   <!-- <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
