refine pricing section

--- a/index.html
+++ b/index.html
@@ -360,86 +360,84 @@
   </section>
   <!-- End Video Promo Section -->
   <!-- Start Pricing Table Section -->
-  <section class="section">
-    <div id="pricing">
-      <div class="container" id="pricing-container">
-        <div class="section-header">
-          <h2 class="section-title">Pricing</h2>
-          <hr class="lines">
-        </div>
-        <div class="col-md-12">
-          <!-- Pricing Controller/Buttons -->
-          <div class="controls text-center">
-            <a class="filter-pricing btn btn-common" data-filter=".tkd-price">
+  <section id="pricing" class="section">
+    <div class="container" id="pricing-container">
+      <div class="section-header">
+        <h2 class="section-title">Pricing</h2>
+        <hr class="lines">
+      </div>
+      <div class="col-md-12">
+        <!-- Pricing Controller/Buttons -->
+        <div class="controls text-center">
+          <a class="filter-pricing btn btn-common" data-filter=".tkd-price">
                 Taekwon-Do
               </a>
-            <a class="filter-pricing btn btn-common" data-filter=".personal-price">
+          <a class="filter-pricing btn btn-common" data-filter=".personal-price">
                 Personal Training
               </a>
-            <a class="filter-pricing btn btn-common" data-filter=".self-price">
+          <a class="filter-pricing btn btn-common" data-filter=".self-price">
                 Self Defence
               </a>
-          </div>
-          <!-- Pricing Controller/Buttons Ends-->
         </div>
-        <div class="pricing-section mix self-price">
-          self
+        <!-- Pricing Controller/Buttons Ends-->
+      </div>
+      <div class="col-md-12 pricing-section mix self-price card elevation--z1">
+        <div class="section-header pricing-header">
+          <p class="pricing-subtitle">Self Defence</p>
         </div>
-        <div class="pricing-section mix personal-price">
-          personal
+      </div>
+      <div class="col-md-12 pricing-section mix personal-price card elevation--z1">
+        <div class="section-header pricing-header">
+          <p class="pricing-subtitle">Personal Training</p>
         </div>
-        <div class="pricing-section mix tkd-price">
-          <p class="section-subtitle">First two weeks free, with no obligation or cost, to see if Taekwon-Do is for you before you pay a cent, so come along and check it out!</p>
+      </div>
+      <div class="col-md-12 pricing-section mix tkd-price card elevation--z1">
+        <div class="section-header pricing-header">
+          <p class="pricing-subtitle">Taekwon-Do</p>
+        </div>
 
-          <div class="row pricing-tables">
-            <div class="col-md-4 col-sm-6 col-xs-12">
-              <div class="pricing-table">
-                <div class="pricing-details">
-                  <h2>Individual</h2>
-                  <span>$65</span>
-                  <ul>
-                    <li>Monthly</li>
-                    <li>Nunc luctus nulla et tellus</li>
-                    <li>Suspendisse quis metus</li>
-                    <li>Vestibul varius fermentum erat</li>
-                  </ul>
-                </div>
+
+        <div class="row pricing-tables">
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="pricing-table elevation--z1">
+              <div class="pricing-details">
+                <h2>Individual</h2>
+                <span>$65</span>
+                <ul>
+                  <li>Monthly</li>
+                </ul>
               </div>
             </div>
+          </div>
 
-            <div class="col-md-4 col-sm-6 col-xs-12">
-              <div class="pricing-table">
-                <div class="pricing-details">
-                  <h2>2 Person</h2>
-                  <span>$120</span>
-                  <ul>
-                    <li>Monthly</li>
-                    <li>Nunc luctus nulla et tellus</li>
-                    <li>Suspendisse quis metus</li>
-                    <li>Vestibul varius fermentum erat</li>
-                  </ul>
-                </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="pricing-table elevation--z1">
+              <div class="pricing-details">
+                <h2>2 Person</h2>
+                <span>$120</span>
+                <ul>
+                  <li>Monthly</li>
+                </ul>
               </div>
             </div>
+          </div>
 
-            <div class="col-md-4 col-sm-6 col-xs-12">
-              <div class="pricing-table">
-                <div class="pricing-details">
-                  <h2>3 or more</h2>
-                  <span>$155</span>
-                  <ul>
-                    <li>Monthly</li>
-                    <li>Ideal for Families</li>
-                  </ul>
-                </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="pricing-table elevation--z1">
+              <div class="pricing-details">
+                <h2>3 or more</h2>
+                <span>$155</span>
+                <ul>
+                  <li>Monthly</li>
+                  <li>Capped Price</li>
+                </ul>
               </div>
             </div>
+          </div>
 
-          </div>
-          <div class="section-header">
-            <p class="section-note">Joining Fee - Individual - $70 - 2 person - $120 - Family - $170</p>
-            <p class="section-note">A $10 discount is also available for holders of a Community Services Card and Tertiary Students</p>
-          </div>
+        </div>
+        <div class="pricing-footer text-center">
+          <a class="btn btn-common" id="apply">Apply for your free trial</a>
         </div>
       </div>
     </div>
