--- a/index.html
+++ b/index.html
@@ -385,10 +385,65 @@
         <div class="section-header pricing-header">
           <p class="pricing-subtitle">Self Defence</p>
         </div>
+
       </div>
       <div class="col-md-12 pricing-section mix personal-price card elevation--z1">
         <div class="section-header pricing-header">
           <p class="pricing-subtitle">Personal Training</p>
+        </div>
+        <div class="row pricing-tables">
+          <div class="price-item col-md-4 col-sm-6 col-xs-12">
+            <div class="pricing-table elevation--z1">
+              <div class="pricing-details">
+                <h2>Personal</h2>
+                <span>1 hour $80</span>
+                <span>45 min $65</span>
+                <span>30 min $45</span> /* TODO Enforce break */
+                <ul>
+                  <li>1-2 people</li>
+                  <li>tailored to your needs</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="price-item col-md-4 col-sm-6 col-xs-12">
+            <div class="pricing-table elevation--z1">
+              <div class="pricing-details">
+                <h2>Group</h2>
+                <span>1 hour $80</span>
+                <ul>
+                  <li>3-5 people</li>
+                  <li>social training</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="price-item col-md-4 col-sm-6 col-xs-12">
+            <div class="pricing-table elevation--z1">
+              <div class="pricing-details">
+                <h2>Bootcamp</h2>
+                <span>1 hour $20</span>
+                <ul>
+                  <li>larger groups</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="price-item col-md-4 col-sm-6 col-xs-12">
+            <div class="pricing-table elevation--z1">
+              <div class="pricing-details">
+                <h2>Programme Design</h2>
+                <span>30 minutes $40</span>
+                <ul>
+                  <li>designed for you</li>
+                  <li>includes 30 minute</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="col-md-12 pricing-section mix tkd-price card elevation--z1">
@@ -398,7 +453,7 @@
 
 
         <div class="row pricing-tables">
-          <div class="col-md-4 col-sm-6 col-xs-12">
+          <div class="price-item col-md-4 col-sm-6 col-xs-12">
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
                 <h2>Individual</h2>
@@ -410,7 +465,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 col-sm-6 col-xs-12">
+          <div class="price-item col-md-4 col-sm-6 col-xs-12">
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
                 <h2>2 Person</h2>
@@ -422,7 +477,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 col-sm-6 col-xs-12">
+          <div class="price-item col-md-4 col-sm-6 col-xs-12">
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
                 <h2>3 or more</h2>
